2008-12-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: cleanup(): Clear the cached connection, 
	to stop Glom from using a connection that has been disconnected.

2008-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_primary_key_is_in_foundset(): Avoid a crash 
	when (unusually) the primary key is not known.

2008-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/layout/layoutitem_text.cc: 
	Copy constructor and operator=: Copy the underlying text, not just 
	the smartpointer to it. This stops us from accidentally changing the 
	empty available template parts in reports.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/309417
	(elmergato) 

2008-12-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_groups_list.cc
	on_button_group_delete():
	* glom/mode_design/users/dialog_users_list.cc
	on_button_user_delete(), on_button_user_add(),
	on_button_user_new(), on_button_user_edit(): 
	Add missing quotes around user and group names in SQL queries.

2008-12-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.[h|cc]: Split query_execute() into query_execute() and 
	query_execute_select(), returning just a bool for query_execute(), 
	as suggested by a TODO because of the changed API in libgda 4.0.
	* Many files: Call the correct method.

2008-12-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: query_execute(): Catch ServerProviderError 
	exceptions too. This needs the latest libgdamm.

2008-12-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.cc:
	get_field_definition(): Actually store the primary-key and unique 
	details. This was a regression since the port to libgda 4.0.

2008-12-17  Armin Burgmeier  <armin@openismus.com>

	* glom/base_db.cc (create_table_with_default_fields): Reverted the
	previous change. People can choose not to show the "comments" or